@@ -524,6 +524,8 @@ Release 0.22.0 - Unreleased
     HDFS-1925. SafeModeInfo should use the correct constant instead of a
     hard-coded value for its default. (Joey Echeverria via todd)
 
+    HDFS-1575. Viewing block from web UI is broken. (Aaron T. Myers via todd)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
